--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -8,7 +8,8 @@
 	</div>
 	<div class="container-single container-catalog col-md-12 mt-3">
 		<div class="catalog-wrapper col-md-10 offset-md-1">
-			<div class="text-center mb-4 pt-4">
+			<h1 class="catalog-title-category text-center">Categories</h1>
+			<div class="catalog-header-btn mb-4 pt-4">
 				<button id="framed-btn" class="main-btn tab-btn active">Framed Painting</button>
 				<button id="fap-btn" class="main-btn tab-btn">Fine Art Print</button>
 				<button id="canvas-btn" class="main-btn tab-btn">Canvas</button>
@@ -27,7 +28,7 @@
 				</div>
 
 				<div class="col-md-6 mt-2 cat-btn-wrap">
-					<h4 class="text-center">Frames Categories</h4>
+					<h4 class="text-center">Subcategories</h4>
 					<div class="text-center m-0">
 						<button id="box-btn" data-category="framed" class="framed cat-btn tab-btn active">Box</button>
 						<button id="classic-btn" data-category="framed" class="framed cat-btn tab-btn">Classic</button>
@@ -765,7 +766,7 @@
 					Each canvas is produced using a <b>12-colour giclée</b> fine art printing process and <b>hand finished</b> by one of the UK’s most experienced canvas framing teams.
 				</p>
 				<div class="col-sm-6 mt-0 cat-btn-wrap text-center">
-					<h4 class="text-center">Canvas Categories</h4>
+					<h4 class="text-center">Subcategories</h4>
 					<button id="framed-canvas-btn" data-category="canvas" class="canvas cat-btn tab-btn active">Framed</button>
 					<button id="stretched-btn" data-category="canvas" class="canvas cat-btn tab-btn">Stretched</button>
 				</div>
