--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -3,8 +3,8 @@
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
 
-<div class="">
-	<form class="col-md-6 offset-md-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
+<div>
+	<form class="col-md-6 offset-md-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" data-posttags="true">
 		<label class="search-label control-label cwhite">Filter by tags</label>
 		<input type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
 		<span data-placeholder="Tags"></span>
