--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -5,7 +5,7 @@
 	<div class="single-wrapper">
 		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Ajouter une image à la galerie</h1>
-			<form id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
+			<form id="gallery" method="POST" action="/api/gallery/post" data-postgal="true" enctype="multipart/form-data">
 				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
@@ -27,7 +27,7 @@
 
 				<div class="form-group text-center">
 					<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-					<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required />
+					<input class="inputfile" type="file" name="img" id="img" multiple required />
 				</div>
 
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
@@ -37,6 +37,6 @@
 	</div>
 </div>
 
-<script src="/scripts/gallery/galleryScripts.js"></script>
+<script src="/scripts/gallery/galleryScripts.js" defer></script>
 <script src="/scripts/core/frontValidation.js"></script>
 <% include ../partials/footer %>
