--- a/public/style.css
+++ b/public/style.css
@@ -1925,7 +1925,7 @@ input.cart-item-qty {
 
 /* NEW USER PAGE */
 .row-height {
-	height: 100%;
+	min-height: 100vh;
 	width: 100%;
 	margin: 0;
 }
@@ -2255,6 +2255,11 @@ tbody tr:hover {
 /* END SINGLE SHOP */
 
 /* CATALOG */
+.catalog-header-btn {
+	justify-content: space-around;
+	display: flex;
+}
+
 .container-catalog {
 	background-color: var(--brand-blue-p1) !important;
 	box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
