--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -1,16 +1,14 @@
 <% include partials/head %>
 
-<script src="/scripts/cart.js"></script>
 <div class="container container-single">
 	<div class="single-wrapper">
-		<% if (locals.totalPrice == "0" || locals.totalPrice == "0.00" ) { %>
-		<div class="col-md-10 offset-md-1 wrapper">
+	
+		<div class="col-md-10 offset-md-1 wrapper p-0">
 			<div class="text-center">
-				<b class="alertEmpty text-center" id="alertEmpty">Your cart is empty!</b>
+				<b class="alertEmpty text-center <% if (locals.totalPrice !== '0' && locals.totalPrice != '0.00') { %>nodisplay<% } %>" id="alertEmpty">Your cart is empty!</b>
 			</div>
 		</div>
-
-		<% } %> <% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %> 
+		<% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %> 
 		<div class="col-md-10 offset-md-1 p-0">
 			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
@@ -34,20 +32,20 @@
 
 				<div class="cart-quantity cart-column">
 					<% if (locals.products[index].isUnique === true) { %>
-					<i class="fas fa-minus fa-2x qty-update" onclick="cartDel('<%= locals.products[index].item._id %>', this)"></i>
+					<i class="fas fa-minus fa-2x qty-update" data-delcart="<%= locals.products[index].item._id %>"></i>
 					<input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" readonly />
 					<i class="fas fa-plus fa-2x qty-update plus-unique" min="0" ></i>
 					<% } else { %>
-					<i class="fas fa-minus fa-2x qty-update" onclick="pwintyCartDel('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
+					<i class="fas fa-minus fa-2x qty-update" data-pdel="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"></i>
 					<input
 						id="qty-<%= locals.products[index].item._id %>-<%= index %>"
 						class="cart-item-qty "
 						value="<%= locals.products[index].qty %>"
 						name="cart-item-qty"
 						title="Numbers only"
-						onchange="pwintyUpdateValue(event, this, '<%= locals.products[index].item._id %>', '<%= index %>')"
+						data-pupd="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"
 					/>
-					<i class="fas fa-plus fa-2x qty-update" min="0" onclick="pwintyCartAdd('<%= locals.products[index].item._id %>', '<%= index %>', this)"></i>
+					<i class="fas fa-plus fa-2x qty-update" min="0" data-padd="true" data-id="<%= locals.products[index].item._id %>" data-reference="<%= index %>"></i>
 					<% } %>
 				</div>
 
@@ -75,8 +73,7 @@
 							name="lastname"
 							placeholder="Doe"
 							value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>"
-							onkeyup="Validate.String(this, 2, 128);"
-							required
+							required disabled
 						/>
 						<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
 					</div>
@@ -87,8 +84,7 @@
 							name="firstname"
 							placeholder="John"
 							value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>"
-							onkeyup="Validate.String(this, 2, 128);"
-							required
+							required disabled
 						/>
 						<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
 					</div>
@@ -101,9 +97,8 @@
 					id="autocomplete"
 					name="fulltext_address"
 					placeholder="Enter your address"
-					onFocus="geolocate()"
 					value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>"
-					required
+					required disabled
 				/>
 					</div>
 				</div>
@@ -112,27 +107,27 @@
 					<div class="row">
 						<div class="col-md-12">
 							<label class="control-label">Street</label>
-							<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required />
+							<input id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required disabled />
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6">
 							<label class="control-label">City</label>
-							<input id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required />
+							<input id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required disabled />
 						</div>
 						<div class="col-md-6">
 							<label class="control-label">State</label>
-							<input id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required />
+							<input id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required disabled />
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-6">
 							<label class="control-label">Postal Code</label>
-							<input id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required />
+							<input id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required disabled />
 						</div>
 						<div class="col-md-6">
 							<label class="control-label">Country</label>
-							<input id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required />
+							<input id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required disabled />
 						</div>
 					</div>
 				</div>
@@ -144,7 +139,7 @@
 					name="instructions"
 					placeholder="Door code or other useful informations..."
 					value="<% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %>"
-					readonly
+					readonly disabled
 				/>
 				</div>
 				</div>
@@ -173,16 +168,12 @@
 </div>
 
 <% if(locals.products){ %>
-	 <% Object.keys(locals.products).forEach(function (index) { %>
-		 <% if (!locals.products[index].item.price) { %>
-			<script>
-				PWINTY_DATA["<%= index %>"] = {
-					SKU: "<%= locals.products[index].attributes.SKU %>",
-					attributes: JSON.parse(`<%= locals.products[index].stringifiedAttributes %>`.replace(/&#34;/gi, '"'))
-				};
-			</script>
+	<% Object.keys(locals.products).forEach(function (index) { %>
+		<% if (!locals.products[index].item.price) { %>
+			<input type="hidden" data-index="<%= index %>" data-sku="<%= locals.products[index].attributes.SKU %>" data-attributes="<%= locals.products[index].stringifiedAttributes %>" />
 		<% } %>
- 	<% }) %> 
+	<% }) %> 
 <% } %> 
 
+<script src="/scripts/cart.js" defer></script>
 <% include partials/footer %>
