--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -4,7 +4,7 @@
 <script src="/scripts/cart.js"></script>
 
 <div>
-	<form class="col-md-6 offset-md-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" data-posttags="true">
+	<form class="col-md-6 offset-md-3 mb-4" id="tags" method="GET" action="/Galerie/tags" data-tagform="true" data-posttags="true">
 		<label class="search-label control-label cwhite">Filter by tags</label>
 		<input type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
 		<span data-placeholder="Tags"></span>
