--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -113,5 +113,5 @@
 
 <script src="/scripts/gallery/galleryScripts.js" defer></script>
 <script src="/scripts/core/carousel-cycle.js"></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include ../partials/footer %>
