--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -8,12 +8,12 @@
 				<div class="row">
 					<div class="col-md-6">
 						<label class="control-label">Last Name</label>
-						<input id="lastname" name="lastname" placeholder="Doe" value="<%= locals.billing.lastname %>" onkeyup="Validate.String(this, 2, 128);" required />
+						<input id="lastname" name="lastname" placeholder="Doe" value="<%= locals.billing.lastname %>" data-vstring="2;128" required />
 						<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
 					</div>
 					<div class="col-md-6">
 						<label class="control-label">First Name</label>
-						<input id="firstname" name="firstname" placeholder="John" value="<%= locals.billing.firstname %>" onkeyup="Validate.String(this, 2, 128);" required />
+						<input id="firstname" name="firstname" placeholder="John" value="<%= locals.billing.firstname %>" data-vstring="2;128" required />
 						<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
 					</div>
 				</div>
@@ -73,5 +73,5 @@
 <script src="/scripts/shop/billing.js" defer></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDviJbyc_hUTWZLprzV0HApjcdBIQHKTpM&libraries=places&callback=initAutocomplete" async defer></script>
 <script src="/scripts/core/auto-complete.js"></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include partials/footer %>
