--- a/views/User.ejs
+++ b/views/User.ejs
@@ -35,7 +35,7 @@
 				<div class="col-md-8 offset-md-2">
 					<form id="nameform" method="POST" action="/api/user/patch/name">
 						<label class="control-label">Username</label>
-						<input type="text" id="name" name="name" value="<% if (locals.user.name) { %><%= locals.user.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required />
+						<input type="text" id="name" name="name" value="<% if (locals.user.name) { %><%= locals.user.name %><% } %>" data-vstring="4;30" required />
 						<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
@@ -44,7 +44,7 @@
 
 					<form id="emailform" method="POST" action="/api/user/patch/email">
 						<label class="control-label">Email</label>
-						<input type="email" id="email" name="email" value="<% if (locals.user.email) { %><%= locals.user.email %><% } %>" onkeyup="Validate.Email(this);" required />
+						<input type="email" id="email" name="email" value="<% if (locals.user.email) { %><%= locals.user.email %><% } %>" data-vemail="true" required />
 						<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
@@ -57,11 +57,11 @@
 						<span data-placeholder="Current Password"></span>
 
 						<label class="control-label mt-3">Password <i>(new)</i></label>
-						<input type="password" id="password" name="password" placeholder="*********" onkeyup="Validate.Password(this);" required />
+						<input type="password" id="password" name="password" placeholder="*********" data-vpw="true" required />
 						<span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
 
 						<label class="control-label">Password <i>(confirm)</i></label>
-						<input type="password" id="password2" name="password2" placeholder="*********" onkeyup="Validate.Password2(this);" required />
+						<input type="password" id="password2" name="password2" placeholder="*********" data-vpw2="true" required />
 						<span id="i_password2" class="form-info"><b>Password</b> has to be the <b>identical</b> to the one you just entered</span>
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
@@ -86,7 +86,7 @@
 								name="lastname"
 								placeholder="Doe"
 								value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>"
-								onkeyup="Validate.String(this, 2, 128);"
+							data-vstring="2;128"
 								required
 							/>
 							<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
@@ -98,7 +98,7 @@
 								name="firstname"
 								placeholder="John"
 								value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>"
-								onkeyup="Validate.String(this, 2, 128);"
+								data-vstring="2;128"
 								required
 							/>
 							<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
@@ -216,5 +216,5 @@
 <script src="/scripts/core/menu-arrow.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDviJbyc_hUTWZLprzV0HApjcdBIQHKTpM&libraries=places&callback=initAutocomplete" async defer></script>
 <script src="/scripts/core/auto-complete.js"></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include partials/footer %>
