--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -8,12 +8,12 @@
 				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
-					<input id="title" type="text" placeholder="Titre" name="title" onkeyup="Validate.String(this, 4, 256);" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required />
+					<input id="title" type="text" placeholder="Titre" name="title" data-vstring="1;256" value="<% if (locals.formData) { %><%= locals.formData.title %><% } %>" required />
 					<span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
 				</div>
 
 				<div class="form-group">
-					<div id="editor" onkeyup="saveContent()"></div>
+					<div id="editor"></div>
 					<input type="hidden" name="content" id="content" />
 					<span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
 				</div>
@@ -25,54 +25,9 @@
 	</div>
 </div>
 
-<script>
-	const toolbarOptions = [
-	    ['bold', 'italic', 'underline', 'strike'],
-	    ['blockquote', 'code-block'],
-	    [{ 'list': 'ordered'}, { 'list': 'bullet' }],
-	    [{ 'indent': '-1'}, { 'indent': '+1' }],
-	    [{ 'size': ['small', false, 'large', 'huge'] }],
-	    [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
-	    [{ 'color': ["black", "white", "red", "orange", "yellow", "green", "blue", "purple"] }, { 'background': ["black", "white", "red", "orange", "yellow", "green", "blue", "purple"] }],
-	    [{ 'font': [] }],
-	    [{ 'align': [] }],
-	    ['link', 'image'],
-	    ['clean']
-	];
-
-	var BackgroundClass = Quill.import('attributors/class/background');
-	var ColorClass = Quill.import('attributors/class/color');
-	var SizeStyle = Quill.import('attributors/class/size');
-	Quill.register(BackgroundClass, true);
-	Quill.register(ColorClass, true);
-	Quill.register(SizeStyle, true);
-
-	let quill = new Quill('#editor', {
-	    modules: {
-	        toolbar: toolbarOptions,
-	    },
-	    placeholder: "Le contenu de votre ticket de blog...",
-	    theme: 'snow'
-	});
-
-	<% if (locals.formData) { %>
-	    let toAppend = "<%= locals.formData.content %>";
-	    toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
-	    const delta = quill.clipboard.convert(toAppend);
-	    quill.setContents(delta, 'silent');
-	<% } %>
-
-	const saveButton = document.getElementById('submit-blog');
-	const editorData = document.getElementById('content');
-
-	saveButton.addEventListener('click', (event) => {
-	    editorData.value = quill.root.innerHTML;
-	})
-
-	function saveContent() {
-	    editorData.value = quill.root.innerHTML;
-	    Validate.String(editorData, 128);
-	}
-</script>
-<script src="/scripts/core/frontValidation.js"></script>
+<% if (locals.formData) { %>
+<input type="hidden" value="<%= locals.formData.content %>" id="blogFormData" />
+<% } %>
+<script src="/scripts/blog/postquill.js" defer></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include ../partials/footer %>
