--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -9,13 +9,13 @@
 				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
-					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.gallery.title %>" onkeyup="Validate.String(this, 1, 256);" required />
+					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.gallery.title %>" data-vstring="1;256" required />
 					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
 				</div>
 
 				<div class="form-group">
 					<label class="control-label">Description</label>
-					<textarea rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required><%= locals.gallery.content %></textarea>
+					<textarea rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." data-vstring="1;2048" required><%= locals.gallery.content %></textarea>
 					<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
 				</div>
 
@@ -51,5 +51,5 @@
 </div>
 
 <script src="/scripts/gallery/galleryScripts.js" defer></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include ../partials/footer %>
