--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -65,5 +65,5 @@
 
 <script src="/scripts/cart.js" defer></script>
 <script src="/scripts/core/carousel-cycle.js"></script>
-<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/core/frontValidation.js" defer></script>
 <% include ../partials/footer %>
