--- a/views/About.ejs
+++ b/views/About.ejs
@@ -21,7 +21,7 @@
 
 			<ul class="footer-list text-center">
 				<li>
-					<a href="#!" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
+					<a href="https://www.instagram.com/maral.abk/" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
 				</li>
 				<li>
 					<a href="https://www.facebook.com/abkarian.maral/" class="social-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
