--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -25,7 +25,7 @@
 		</div>
 		<% }) %> <% } else { %>
 		<div class="text-center bwhite">
-			<h1>Blog page is under maintenance, please come back later</h1>
+			<h1>Gallery page is under maintenance, please come back later</h1>
 		</div>
 		<% } %>
 	</div>
