--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -82,7 +82,7 @@ http {
 			proxy_cache_revalidate on;
 			#proxy_cache_bypass $http_upgrade;##
 			proxy_cache custom_cache;#
-			proxy_cache_bypass  $http_cache_control;#
+			#proxy_cache_bypass  $http_cache_control;#
 			add_header X-Proxy-Cache $upstream_cache_status;#
 			proxy_set_header X-Forwarded-Proto $scheme;#
 
