--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -34,7 +34,7 @@ http {
 	access_log <%= ENV['NGINX_ACCESS_LOG_PATH'] || 'logs/nginx/access.log' %> main;
 	error_log <%= ENV['NGINX_ERROR_LOG_PATH'] || 'logs/nginx/error.log' %>;
 
-	proxy_cache_path /app/config/nginx-cache levels=1:2 keys_zone=custom_cache:10m inactive=60m use_temp_path=off;#
+	proxy_cache_path /app/config levels=1:2 keys_zone=custom_cache:10m inactive=60m use_temp_path=off;#
 	proxy_cache_key "$scheme$request_method$host$request_uri";#
 
 	#proxy_cache_path /tmp/nginx-cache levels=1:2 keys_zone=staticcache:8m max_size=100m inactive=60m use_temp_path=off;
