--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -59,12 +59,12 @@ http {
 		tcp_nodelay       on;
 
 		location / {
-				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
-				add_header X-Cache-Status $upstream_cache_status;
+			add_header X-Cache-Status $upstream_cache_status;
 
-					proxy_http_version 1.1;
+			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
 			proxy_set_header X-Real-IP $remote_addr;
@@ -75,6 +75,8 @@ http {
 			add_header X-Proxy-Cache $upstream_cache_status;#
 			proxy_set_header X-Forwarded-Proto $scheme;#
 			proxy_pass_request_headers on;
+
+			expires 7d;
 
 			alias /app/public;
 			try_files  $uri @app_server;
@@ -105,12 +107,12 @@ http {
 			proxy_pass_request_headers on;
 		}
 
-		location ~* \.(jpg|jpeg|png|gif|ico)$ { #caching
-       		expires 30d;
-		}
+		#location ~* \.(jpg|jpeg|png|gif|ico)$ { #caching
+       	#	expires 30d;
+		#}
 
-		location ~* \.(css|js)$ {
-			expires 7d;
-		}
+		#location ~* \.(css|js)$ {
+		#	expires 7d;
+		#}
 	}
 }
