updating nginx config

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -62,7 +62,8 @@ http {
 			proxy_cache custom_cache;
 			proxy_cache_revalidate on;
 			proxy_ssl_name www.maral.fr;
-			 add_header Cache-Control "public";
+			proxy_ignore_headers "Set-Cookie";
+proxy_hide_header "Set-Cookie";
 			alias /app/public;
 			try_files  $uri @app_server;
 		}
