updating nginx config

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -58,7 +58,7 @@ http {
 		tcp_nopush on;
 		tcp_nodelay       on;
 
-		location / {
+		location /public {
 			proxy_cache custom_cache;
 			proxy_cache_revalidate on;
 			proxy_ssl_name www.maral.fr;
