--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -68,6 +68,7 @@ http {
 		}
 
 		location @app_server {
+			alias /app;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
