--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -68,6 +68,31 @@ http {
 			expires 7d;
 		}
 
+		location / {
+				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header Host $http_host;
+			proxy_redirect off;
+			add_header X-Cache-Status $upstream_cache_status;
+
+			proxy_ssl_name www.maral.fr;
+
+			# Following is necessary for Websocket support
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+			proxy_set_header X-Real-IP $remote_addr;
+			
+			proxy_cache_revalidate on;
+			#proxy_cache_bypass $http_upgrade;##
+			proxy_cache custom_cache;#
+			#proxy_cache_bypass  $http_cache_control;#
+			add_header X-Proxy-Cache $upstream_cache_status;#
+			proxy_set_header X-Forwarded-Proto $scheme;#
+
+			proxy_pass http://app_server;
+			proxy_pass_request_headers on;
+		}
+
 		location @app_server {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
