--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -56,9 +56,10 @@ http {
 		server_name maral.fr www.maral.fr maral.herokuapp.com www.maral.herokuapp.com;
 		keepalive_timeout 5;
 		tcp_nopush on;
-		tcp_nodelay       on;
+		tcp_nodelay on;
 
-		location /public {
+		# location /public {
+		location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|rss|txt)$ {
 			#proxy_cache custom_cache;
 			#proxy_cache_revalidate on;
 			#proxy_ssl_name www.maral.fr;
