--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -26,7 +26,7 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- CUSTOM -->
-		<link rel="stylesheet" href="/public/style.css" />
+		<link rel="stylesheet" href="/style.css" />
 		<!-- Quill RTE -->
 		<script src="https://cdn.quilljs.com/1.3.7/quill.core.js"></script>
 		<script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
