--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -109,7 +109,7 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			
 			#proxy_cache_revalidate on;
-			#proxy_cache_bypass $http_upgrade;##
+			proxy_cache_bypass $http_upgrade;##
 			#proxy_cache custom_cache;#
 			#proxy_cache_bypass  $http_cache_control;#
 			add_header X-Proxy-Cache $upstream_cache_status;#
