fixing nginx caching abuse

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -53,7 +53,7 @@ http {
 
 	server {
 		listen <%= ENV["PORT"] %>;
-		server_name maral.fr www.maral.fr maral.herokuapp.com www.maral.herokuapp.com;
+		server_name maral.fr www.maral.fr; # maral.herokuapp.com www.maral.herokuapp.com;
 		keepalive_timeout 5;
 		tcp_nopush on;
 		tcp_nodelay on;
@@ -62,7 +62,7 @@ http {
 		location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|rss|txt)$ {
 			#proxy_cache custom_cache;
 			#proxy_cache_revalidate on;
-			#proxy_ssl_name www.maral.fr;
+			proxy_ssl_name www.maral.fr;
 			
 			alias /app/public;
 			try_files $uri @app_server;
