--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -88,7 +88,7 @@ http {
 			#proxy_cache custom_cache;#
 			#proxy_cache_bypass  $http_cache_control;#
 			add_header X-Proxy-Cache $upstream_cache_status;#
-			proxy_set_header X-Forwarded-Proto https;#
+			proxy_set_header X-Forwarded-Proto $scheme;#
 			proxy_pass_request_headers on;
 
 			proxy_pass http://app_server;
@@ -113,7 +113,7 @@ http {
 			#proxy_cache custom_cache;#
 			#proxy_cache_bypass  $http_cache_control;#
 			add_header X-Proxy-Cache $upstream_cache_status;#
-			proxy_set_header X-Forwarded-Proto https;#
+			proxy_set_header X-Forwarded-Proto $scheme;#
 			proxy_pass_request_headers on;
 
 			proxy_pass http://app_server;
