fixing nginx caching abuse

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -50,6 +50,7 @@ http {
 		# multiple servers adresses (as many as clusters)
 		server unix:/tmp/nginx.socket fail_timeout=0;
 	}
+	proxy_headers_hash_max_size: 1024
 
 	server {
 		listen <%= ENV["PORT"] %>;
