--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -74,7 +74,7 @@ http {
 			expires 7d;
 		}
 
-		location @app_server {
+		location / {
 			proxy_http_version 1.1;
 			proxy_redirect off;
 			proxy_ssl_name www.maral.fr;
