fixing nginx caching abuse

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -85,7 +85,7 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
-			proxy_set_header X-Forwarded-Proto $scheme;#
+			proxy_set_header X-Forwarded-Proto https;#
 			
 			add_header X-Proxy-Cache $upstream_cache_status;#
 			add_header X-Cache-Status $upstream_cache_status;
