--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -50,7 +50,6 @@ http {
 		# multiple servers adresses (as many as clusters)
 		server unix:/tmp/nginx.socket fail_timeout=0;
 	}
-	proxy_headers_hash_max_size 1024;
 
 	server {
 		listen <%= ENV["PORT"] %>;
@@ -58,10 +57,6 @@ http {
 		keepalive_timeout 5;
 		tcp_nopush on;
 		tcp_nodelay on;
-
-		if ($http_x_forwarded_proto != "https") {
-  			return 301 https://$host$request_uri;
-		}
 
 		# location /public {
 		location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|rss|txt)$ {
@@ -75,22 +70,28 @@ http {
 		}
 
 		location / {
-			proxy_http_version 1.1;
-			proxy_redirect off;
-			proxy_ssl_name www.maral.fr;
-			proxy_pass_request_headers on;
-
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+				proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
-			proxy_set_header X-Forwarded-Proto $scheme;#
-			
-			add_header X-Proxy-Cache $upstream_cache_status;#
+			proxy_redirect off;
 			add_header X-Cache-Status $upstream_cache_status;
 
+			proxy_ssl_name www.maral.fr;
+
+			# Following is necessary for Websocket support
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+			proxy_set_header X-Real-IP $remote_addr;
+			
+			proxy_cache_revalidate on;
+			#proxy_cache_bypass $http_upgrade;##
+			proxy_cache custom_cache;#
+			#proxy_cache_bypass  $http_cache_control;#
+			add_header X-Proxy-Cache $upstream_cache_status;#
+			proxy_set_header X-Forwarded-Proto $scheme;#
+
 			proxy_pass http://app_server;
+			proxy_pass_request_headers on;
 		}
 	}
 }
