--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -65,6 +65,8 @@ http {
 		}
 
 		location / {
+ 			proxy_cache_bypass $http_upgrade;
+
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
