--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -60,11 +60,11 @@ http {
 
 		location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|rss|txt)$ {
 			alias /app/public;
-			try_files $uri /;
+			try_files $uri @app_server;
 			expires 7d;
 		}
 
-		location / {
+		location @app_server {
  			proxy_cache_bypass $http_upgrade;
 
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
